Add footer and fixes for dotted column separator and nav active state

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 
-	<div id="footer">blah</div>
+	<div id="footer"></div>
 	<script src="{{ site.baseurl }}/bower_components/jquery/dist/jquery.min.js"></script>
 	<script src="{{ site.baseurl }}/bower_components/tether/dist/js/tether.min.js"></script>
 	<script src="{{ site.baseurl }}/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
