--- a/css/styles.css
+++ b/css/styles.css
@@ -17,12 +17,19 @@ body, .navbar-light {
 #primary-column {
 
 	padding-right: 40px;
+	padding-top: 60px;
 	/* background-color: green; */
-	border-right: 1px dotted grey;
+	/* border-right: 1px dotted grey;*/
+
+	background-image: linear-gradient(#171717 10%, rgba(255,255,255,0) 0%);
+	background-position: right;
+	background-size: 1px 8px;
+	background-repeat: repeat-y;
 }
 
 #sidebar {
-
+	padding-top: 0px;
+	padding-left: 40px;
 }
 
 h1 {
@@ -83,13 +90,23 @@ nav .nav-item
 	padding-bottom: 30px;
 }
 
-.navbar .nav-link.selected
+.navbar .nav-link.active
 {
 	border-bottom: 2px solid #D20298;
 }
 
 #footer {
-	margin-top: 100px;
-	background-image: url("../img/footer@2x.jpg");
-	height: 132px;
+	margin-top: 200px;
+	background: #333333 url("../img/footer@2x.jpg") bottom left no-repeat;
+	background-size: 1024px 132px;
+	width: 100%;
+	height:132px;
+
+}
+
+.shadow {
+	-moz-box-shadow: 0px 2px 32px 11px #e0e0e0; 
+	-webkit-box-shadow: 0px 2px 32px 11px #e0e0e0; 
+	box-shadow: 0px 2px 32px 11px #e0e0e0; 
+	/* Alas, box-shadow is not fully supported by IE < 9 */
 }
