--- a/css/styles.css
+++ b/css/styles.css
@@ -27,10 +27,20 @@ body, .navbar-light {
 	background-repeat: repeat-y;
 }
 
+/* SIDEBAR */
+
 #sidebar {
 	padding-top: 0px;
 	padding-left: 40px;
 	padding-right: 0px;
+
+}
+
+
+#sidebar .about
+{
+	background-color: #ccc;
+	border: inset white 20px;
 
 }
 
@@ -47,6 +57,14 @@ body, .navbar-light {
 	max-width: 100%;
 }
 
+
+
+
+
+
+/* TYPOGRAPHY */
+
+
 h1 {
   font-family: "atrament-web","atrament";
   font-size: 3rem;
@@ -58,14 +76,7 @@ p {
 	font-size: 1.125rem;
 }
 
-nav {
-	font-family: "atrament-web","atrament";
- 	font-size: 0.9375rem;
- 	background: white;
- 	text-transform: uppercase;
- 	letter-spacing: 2px; 
 
-}
 
 .date
 {
@@ -84,11 +95,30 @@ blockquote p {
 
 }
 
+
+/* NAVIGATION */
+
+nav {
+	font-family: "atrament-web","atrament";
+ 	font-size: 0.9375rem;
+ 	background: white;
+ 	text-transform: uppercase;
+ 	letter-spacing: 2px; 
+
+}
+
 .navbar
 {
-	padding-top: 50px;
+	padding-top: 40px;
+	padding-bottom: 30px;
 	padding-left: 40px;
 	padding-right: 0px;
+}
+
+.navbar-brand.scrolled
+{
+	/*transform: scale(0.01);
+	transition: transform 100ms linear; */
 }
 
 nav .nav-item
@@ -123,6 +153,20 @@ nav .navbar-toggler:focus
 {
 	border-bottom: 2px solid #D20298;
 }
+
+.navbar-fixed-top.scrolled {
+  background-color: rgba(250, 250, 250, 0.97) !important;
+  border-bottom: #E7E7E7 solid 1px;
+  transition: background-color 200ms linear;
+  transition: box-shadow 200ms;
+-webkit-box-shadow: 0px 6px 20px 0px rgba(36,36,36,0.06);
+-moz-box-shadow: 0px 6px 20px 0px rgba(36,36,36,0.06);
+box-shadow: 0px 6px 20px 0px rgba(36,36,36,0.06);
+
+}
+
+
+/* FOOTER */
 
 #footer {
 	margin-top: 200px;
