--- a/css/styles.css
+++ b/css/styles.css
@@ -39,8 +39,18 @@ body, .navbar-light {
 
 #sidebar .about
 {
-	background-color: #ccc;
-	border: inset white 20px;
+	position: relative;
+	top: -100px; 
+	z-index: -1;
+	min-height: 500px;
+	background-color: #D0D0D0;
+	background-image: url("../img/about-background-bottom@2x.jpg");
+	/* background-size: 253px 386px;*/
+	background-position: bottom;
+	background-repeat: no-repeat;
+	margin-right: 47px;
+	margin-left: 10px;
+	max-width: 300px;
 
 }
 
@@ -55,6 +65,8 @@ body, .navbar-light {
 	display: inline-block;
 	height: auto;
 	max-width: 100%;
+	/* position: relative;
+	 top:-40px; */
 }
 
 
@@ -159,9 +171,9 @@ nav .navbar-toggler:focus
   border-bottom: #E7E7E7 solid 1px;
   transition: background-color 200ms linear;
   transition: box-shadow 200ms;
--webkit-box-shadow: 0px 6px 20px 0px rgba(36,36,36,0.06);
--moz-box-shadow: 0px 6px 20px 0px rgba(36,36,36,0.06);
-box-shadow: 0px 6px 20px 0px rgba(36,36,36,0.06);
+	-webkit-box-shadow: 0px 6px 20px 0px rgba(36,36,36,0.06);
+	-moz-box-shadow: 0px 6px 20px 0px rgba(36,36,36,0.06);
+	box-shadow: 0px 6px 20px 0px rgba(36,36,36,0.06);
 
 }
 
