--- a/css/styles.css
+++ b/css/styles.css
@@ -41,12 +41,12 @@ body, .navbar-light {
 {
 	position: relative;
 	top: -60px; 
-	z-index: -1;
-	min-height: 500px;
+	min-height: 450px;
 	/*background-color: #D0D0D0;*/
-	background-image: url("../img/about-header@2x.jpg");
-	background-size: 100%;
-	background-repeat: no-repeat;
+	background-image: url("../img/about-footer@2x.jpg"), url("../img/about-header@2x.jpg"), url("../img/about-fill@2x.jpg") ;
+	background-size: 100% auto, 100% auto, 100% auto;
+	background-repeat: no-repeat, no-repeat, repeat-y;
+	background-position: bottom, top, bottom;
 	/* background-image: url("../img/about-background-bottom@2x.jpg");
 	background-position: bottom;
 	background-repeat: no-repeat;
