--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,7 @@ body, .navbar-light {
 	padding-top: 0px;
 	padding-left: 0px; 
 	padding-right: 0px;
+	/* max-width: 350px;*/
 
 }
 
@@ -41,37 +42,47 @@ body, .navbar-light {
 {
 	position: relative;
 	top: -60px; 
-	min-height: 450px;
-	/*background-color: #D0D0D0;*/
 	background-image: url("../img/about-footer@2x.jpg"), url("../img/about-header@2x.jpg"), url("../img/about-fill@2x.jpg") ;
 	background-size: 100% auto, 100% auto, 100% auto;
 	background-repeat: no-repeat, no-repeat, repeat-y;
 	background-position: bottom, top, bottom;
-	/* background-image: url("../img/about-background-bottom@2x.jpg");
-	background-position: bottom;
-	background-repeat: no-repeat;
-	margin-right: 47px;
-	margin-left: 10px;
-	max-width: 300px; */
-
+	padding-top: 105% !important;
+	padding-left: 80px;
+	padding-right: 80px;
+	padding-bottom: 80px;
 }
 
-#sidebar .avatar-container
+/* 
+@media only screen and (max-width: 890px) 
 {
-	text-align: right;
+	   #sidebar .about {padding-top: 300px;}
+
 }
 
-#sidebar img.avatar-image
+@media only screen and (min-width: 1050px) 
 {
-	/* float: right;*/
-	display: inline-block;
-	height: auto;
-	max-width: 100%;
-	/* position: relative;
-	 top:-40px; */
+	   #sidebar .about {padding-top: 370px;}
+
 }
 
+@media only screen and (min-width: 1150px) 
+{
+	   #sidebar .about {padding-top: 390px;}
 
+}
+@media only screen and (min-width: 1230px) 
+{
+	   #sidebar .about {padding-top: 420px;}
+
+}
+*/
+
+#sidebar .about p
+{
+	font-family: "open-sans","Open Sans";
+	font-size: .9rem !important;
+	text-align: center;
+}
 
 
 
