Add non breaking space to about copy orphan and add responsive horizontal padding

--- a/css/styles.css
+++ b/css/styles.css
@@ -47,8 +47,8 @@ body, .navbar-light {
 	background-repeat: no-repeat, no-repeat, repeat-y;
 	background-position: bottom, top, bottom;
 	padding-top: 105% !important;
-	padding-left: 80px;
-	padding-right: 80px;
+	padding-left: 22%;
+	padding-right: 22%;
 	padding-bottom: 80px;
 }
 
