--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
         $(document).scroll(function () {
           var $nav = $(".navbar-fixed-top");
           var $brand = $(".navbar-brand");
-          $nav.toggleClass('scrolled', $(this).scrollTop() > $nav.height());
+          $nav.toggleClass('scrolled', $(this).scrollTop() > 20);
           $brand.toggleClass('scrolled', $(this).scrollTop() > $nav.height());
 
         });
