--- a/css/styles.css
+++ b/css/styles.css
@@ -18,9 +18,6 @@ body, .navbar-light {
 
 	padding-right: 40px;
 	padding-top: 60px;
-	/* background-color: green; */
-	/* border-right: 1px dotted grey;*/
-
 	background-image: linear-gradient(#171717 10%, rgba(255,255,255,0) 0%);
 	background-position: right;
 	background-size: 1px 8px;
@@ -51,31 +48,6 @@ body, .navbar-light {
 	padding-right: 22%;
 	padding-bottom: 80px;
 }
-
-/* 
-@media only screen and (max-width: 890px) 
-{
-	   #sidebar .about {padding-top: 300px;}
-
-}
-
-@media only screen and (min-width: 1050px) 
-{
-	   #sidebar .about {padding-top: 370px;}
-
-}
-
-@media only screen and (min-width: 1150px) 
-{
-	   #sidebar .about {padding-top: 390px;}
-
-}
-@media only screen and (min-width: 1230px) 
-{
-	   #sidebar .about {padding-top: 420px;}
-
-}
-*/
 
 #sidebar .about p
 {
@@ -177,6 +149,10 @@ nav .navbar-toggler:focus
 .navbar .nav-link.active
 {
 	border-bottom: 2px solid #D20298;
+}
+
+.navbar-fixed-top{
+	border-bottom: none;
 }
 
 .navbar-fixed-top.scrolled {
