--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,7 @@ body, .navbar-light {
 	padding-bottom: 80px;
 }
 
-#sidebar .about p
+#sidebar .about p, #sidebar .subscribe p
 {
 	font-family: "open-sans","Open Sans";
 	font-size: .9rem !important;
@@ -57,6 +57,28 @@ body, .navbar-light {
 }
 
 
+#sidebar .subscribe
+{
+	position: relative;
+	top: -100px;
+	z-index: -1;
+	color: #FFF;
+	height: 500px;
+	background-image: url("../img/subscribe-footer@2x.jpg"), url("../img/subscribe-header@2x.jpg"), url("../img/subscribe-fill@2x.jpg") ;
+	background-size: 100% auto, 100% auto, 100% auto;
+	background-repeat: no-repeat, no-repeat, repeat-y;
+	background-position: bottom, top, bottom;
+	padding-left: 22%;
+	padding-right: 22%;
+	padding-bottom: 600px;
+}
+
+#sidebar .subscribe h2
+{
+	padding-top: 60%;
+	text-align: center;
+	font-family: "atrament-web","atrament";
+}
 
 
 /* TYPOGRAPHY */
@@ -90,6 +112,23 @@ blockquote p {
  	font-style: italic;
  	font-weight: 800;
 
+}
+
+/* BUTTONS */
+
+
+.btn-primary{
+	background-color: #D20298;
+	border-radius: 0;
+	border: none;
+	font-family: "atrament-web","atrament";
+}
+
+/* FORM ELEMENTS */
+
+input {
+	margin-bottom: 15px;
+	height: 44px;
 }
 
 
