--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,7 +3,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <a class="navbar-brand" href="#">
-    <img src="/img/lazrjet-brand@2x.png" width="162" height="79" alt="">
+    <img src="{{ site.baseurl }}/img/lazrjet-brand@2x.png" width="162" height="79" alt="">
   </a>
   <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
     <ul class="navbar-nav">
