Add link to nav brand

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,7 +2,7 @@
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <a class="navbar-brand" href="#">
+  <a class="navbar-brand" href="{{ site.baseurl }}/">
     <img src="{{ site.baseurl }}/img/lazrjet-brand@2x.png" width="162" height="79" alt="">
   </a>
   <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
