--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,7 +10,7 @@
 
     {% for item in site.data.navigation.nav %}
       <li class="nav-item">
-        <a class="nav-link {% if item.url == page.url %}active{% endif %}" href="{{ site.baseurl }}/{{ item.url }}">{{ item.title }}</a>
+        <a class="nav-link {% if item.url == page.url %}active{% endif %}" href="{{ site.baseurl }}{{ item.url }}">{{ item.title }}</a>
       </li>
     {% endfor %}
 
