--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,16 @@
 				<div class="post-header">
 					<h1>{{ page.title }}</h1>
 			  		<div class="date">{{ page.date | date: '%B %d, %Y' }}</div>
+
+			  		{% if page.soundcloud %}
+
+			  		<iframe class="soundcloud" width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/{{ page.soundcloud }}&amp;color=%23000000&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=false&amp;visual=true"></iframe>
+
+			  		{% else %}
+
 					<img class="img-fluid" src="{{ site.baseurl }}/assets/{{ page.image }}" />
+
+					{% endif %}
 					
 				</div>
 
