--- a/css/styles.css
+++ b/css/styles.css
@@ -3,9 +3,15 @@ body, .navbar-light {
 	color: #343434 !important;
 }
 
-.post-header img, .post-header .soundcloud {
+.post-header img, .post-header .soundcloud, .youtube{
 	margin-top: 40px;
 	margin-bottom: 40px;
+}
+
+.youtube
+{
+	width: 100%;
+	min-height: 500px;
 }
 
 #main-container
