--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,9 @@
 
 			  		{% elsif page.youtube %}
 
-			  		<iframe class="youtube" src="https://www.youtube.com/embed/{{ page.youtube }}" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+					<div class="embed-responsive embed-responsive-4by3 mb-4 mt-4">
+			  			<iframe class=" embed-responsive-item" src="https://www.youtube.com/embed/{{ page.youtube }}" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+			  		</div>
 
 			  		{% else %}
 
