Fixed nav bar anim

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,8 @@ body, .navbar-light {
 #primary-column {
 
 	padding-right: 40px;
-	padding-top: 60px;
+	/* padding-top: 60px; */
+	padding-top: 0px;
 	background-image: linear-gradient(#171717 10%, rgba(255,255,255,0) 0%);
 	background-position: right;
 	background-size: 1px 8px;
@@ -110,6 +111,7 @@ a:hover
 a.nav-link
 {
 	color: rgba(0,0,0,.5);
+	padding-top: 0px;
 }
 
 a.nav-link.active
@@ -253,16 +255,20 @@ nav {
 
 .navbar
 {
-	padding-top: 40px;
-	padding-bottom: 30px;
+
+	padding-bottom: 0px !important;
+	height: auto;
+	max-height: 140px;
+	padding-top: 30px;
 	padding-left: 40px;
 	padding-right: 0px;
 }
 
 .navbar-brand.scrolled
 {
-	/*transform: scale(0.01);
-	transition: transform 100ms linear; */
+	transform: scale(0.5);
+	/* transition: transform 0.1s ease-out; */
+
 }
 
 nav .nav-item
@@ -290,7 +296,7 @@ nav .navbar-toggler:focus
 
 .navbar .navbar-nav
 {
-	padding-bottom: 30px;
+	/* padding-bottom: 30px; */
 }
 
 .navbar .nav-link.active
@@ -303,13 +309,17 @@ nav .navbar-toggler:focus
 }
 
 .navbar-fixed-top.scrolled {
-  background-color: rgba(250, 250, 250, 0.97) !important;
+	padding-top: 0px !important;
+	padding-left: 15px !important;
+  background-color: rgba(250, 250, 250, 0.98) !important;
   border-bottom: #E7E7E7 solid 1px;
   transition: background-color 200ms linear;
   transition: box-shadow 200ms;
 	-webkit-box-shadow: 0px 6px 20px 0px rgba(36,36,36,0.06);
 	-moz-box-shadow: 0px 6px 20px 0px rgba(36,36,36,0.06);
 	box-shadow: 0px 6px 20px 0px rgba(36,36,36,0.06);
+	max-height: 70px;
+  transition: max-height 0.1s ease-out;
 
 }
 
